@@ -1,4 +1,5 @@
 Unreleased
+- Fixed Unwanted line breaks around <inlinemediaobject> images. BZ #1222067
 - Fixed EPUB output of db5 brands can't be viewed. BZ #1241348
 
 4.3.1 Thu Jun 18 2015
